# bfs-task-1

./: .gitignore  CMakeLists.txt  README.md  input1.txt  input2.txt  input3.txt  main.cpp
include/: mgraph.hpp
src/: mgraph.cpp
tests/: input.txt  input_less.txt  test.cpp
tests/dijkstra-test/: input1.txt  input2.txt  output1.txt  output2.txt
